key palette display fixes and behavior change: mobiles will also see it above the input, too difficult to control positioning on mobile browsers

--- a/src/neahtta/static/css/base.css
+++ b/src/neahtta/static/css/base.css
@@ -467,31 +467,6 @@ span.entry_source {
  */
 
 #keyboard {
-    /* display: none; */
-    background-color: #000;
-}
-
-/* mobile positioning */
-@media (max-width: 550px) {
-    #keyboard {
-        position: fixed;
-        bottom: 0px;
-        left: 0px;
-        width: 100%;
-        height: 40px;
-    }
-
-}
-
-/* tablet positioning */
-@media (min-width: 550px) and (max-width: 800px) {
-    #keyboard {
-        position: fixed;
-        bottom: 0px;
-        left: 0px;
-        width: 100%;
-        height: 40px;
-    }
 }
 
 /* TODO: different design for desktop, closer to input, maybe use bootstrap
@@ -517,7 +492,7 @@ span.entry_source {
 #keyboard ul li {
 	display: block;
     float: left;
-    background-color: #222;
+    /* background-color: #222; */
     display: table-cell;
 }
 
@@ -534,12 +509,29 @@ span.entry_source {
 
 #keyboard ul li a {
     /* text-decoration: none; */
-    text-shadow: 0px 0px 1px rgba(255,255,255,.1);
-    color: #0088cc;
+    /* text-shadow: 0px 0px 1px rgba(255,255,255,.1); */
+    /* color: #0088cc; */
 }
 
 /* desktop positioning */
 /* TODO: JS to position next to input */
+
+/* mobile tweaks */
+@media (max-width: 550px) {
+    form#neahttasaanit.keyboard-visible {
+        margin-top: .25em;
+    }
+
+    #keyboard ul li a {
+        font-size: 22px;
+    }
+
+}
+
+/* tablet positioning */
+@media (min-width: 550px) and (max-width: 800px) {
+}
+
 
 @media (min-width: 801px) {
     #keyboard {
